# rtipc

./: README.md  setup.cfg  setup.py
.github/workflows/: ci.yaml
rtipc/: rtipc.py
test/: test_once.py
