[metadata]
name = rtipc
# version = attr: rtipc.version.__version__
description = A Python binding for https://gitlab.com/etherlab.org/rtipc
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/cielavenir/rtipc
license = LGPL-2.1-or-later or MIT
author = cielavenir
author_email = cielartisan@gmail.com
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Operating System :: POSIX
    Topic :: Software Development :: Libraries
    Topic :: Utilities
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: Implementation :: PyPy

[options]
packages = rtipc
install_requires =
    six
    aenum~=2.2; python_version < "3"
